welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:24: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
		if (estFaceMur) {
                ^SnakeBuggle:32: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
		return x
                ^