welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	
	baisseBrosse
	var y=0
	while (!PositionFinale){
		avance
		if (estFaceMur){
			if (y%2=0) {
				gauche
				avance
				gauche
			}
			else {
				droite
				avance
				droite
			}
			y=y+1
		}
	}
	def  PositionFinale() :Boolean {
		var x = false
		if (estFaceMur) {
			getDirection match {
				case Direction.est => gauche
				case Direction.ouest => droite
				case _
			}
			if (estFaceMur) x=true
		}
		return x
	}
}